[package]
name = "bevy_heavy"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Joona Aalto <jondolf.dev@gmail.com>"]
description = "Mass property computation for Bevy's geometric primitives."

[features]
default = ["bevy_reflect"]

# Enable reflection using `bevy_reflect`.
bevy_reflect = ["dep:bevy_reflect", "bevy_math/bevy_reflect"]

# Enable data serialization/deserialization using `serde`.
serialize = ["dep:serde", "bevy_math/serialize"]

# Enable `approx` to approximate floating point equality comparisons and assertions for types.
approx = ["dep:approx", "bevy_math/approx"]

# Enable libm mathematical functions for glam types to ensure consistent outputs
# across platforms at the cost of losing hardware-level optimization using intrinsics.
libm = ["bevy_math/libm"]

[dependencies]
# Math
approx = { version = "0.5", optional = true }
bevy_math = { version = "0.15.0-rc", default-features = false }

# Serialization
bevy_reflect = { version = "0.15.0-rc", default-features = false, optional = true }
serde = { version = "1.0", default-features = false, optional = true }

[dev-dependencies]
# Enable `approx` for testing.
bevy_heavy = { path = ".", features = ["approx"] }

# Math
approx = "0.5"
bevy_math = { version = "0.15.0-rc", default-features = false, features = [
    "approx",
    "rand",
] }

# Random number generation
rand = "0.8"
rand_chacha = "0.3"
