[package]
name = "bevy_heavy"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Joona Aalto <jondolf.dev@gmail.com>"]
description = "Mass property computation for Bevy's geometric primitives."
documentation = "https://docs.rs/bevy_heavy"
repository = "https://github.com/Jondolf/bevy_heavy"
readme = "README.md"
keywords = ["gamedev", "physics", "simulation", "math", "mass", "bevy"]
categories = ["game-development", "science", "mathematics", "simulation"]

[features]
default = ["2d", "3d", "bevy_reflect"]

# Enable 2D functionality.
2d = []

# Enable 3D functionality.
3d = []

# Enable reflection using `bevy_reflect`.
bevy_reflect = ["dep:bevy_reflect", "bevy_math/bevy_reflect"]

# Enable data serialization/deserialization using `serde`.
serialize = ["dep:serde", "bevy_math/serialize"]

# Enable `approx` to approximate floating point equality comparisons and assertions for types.
approx = ["dep:approx", "bevy_math/approx"]

# Enable libm mathematical functions for glam types to ensure consistent outputs
# across platforms at the cost of losing hardware-level optimization using intrinsics.
libm = ["bevy_math/libm"]

[dependencies]
# Math
approx = { version = "0.5", optional = true }
bevy_math = { version = "0.15", default-features = false }

# Serialization
bevy_reflect = { version = "0.15", default-features = false, optional = true }
serde = { version = "1.0", default-features = false, optional = true }

[dev-dependencies]
# Enable `approx` for testing.
bevy_heavy = { path = ".", features = ["approx"] }

# Math
approx = "0.5"
bevy_math = { version = "0.15", default-features = false, features = [
    "approx",
    "rand",
] }

# Random number generation
rand = "0.8"
rand_chacha = "0.3"

[lints.clippy]
alloc_instead_of_core = "warn"
std_instead_of_alloc = "warn"
std_instead_of_core = "warn"